move widgets app to avoid layout issued (currently only visible with many icons)

--- a/Signum.Web/Signum/Content/Widgets.css
+++ b/Signum.Web/Signum/Content/Widgets.css
@@ -2,7 +2,7 @@
 {
     float:right;
     list-style-type: none;
-    margin-top:-25px;
+    margin-top:-30px;
 }
 
 ul.sf-widgets>li
